fix: HTML entity encoding in tab titles and code blocks
- Tab titles now use textContent instead of escapeHtml + innerHTML
- Added |safe filter to raw markdown in doc.html to prevent Jinja2 escaping
- Fixes quotes showing as &#34; in code blocks

--- a/src/templates/doc.html
+++ b/src/templates/doc.html
@@ -20,6 +20,6 @@
   </article>
 
   <!-- Raw content for JS to pick up -->
-  <script type="text/plain" class="raw-markdown">{{ doc.content }}</script>
+  <script type="text/plain" class="raw-markdown">{{ doc.content | safe }}</script>
 </div>
 {% endblock %}
