--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -13,6 +13,7 @@
       </div>
     </div>
     <div class="dashboard-actions">
+      <button class="btn-text btn-add" onclick="DocumentCreator.open()">+ New</button>
       <button class="btn-text" hx-get="/partials/doc-list" hx-target="#document-list" hx-swap="innerHTML">
         Refresh
       </button>
